<resources>
    <string name="app_name">Colors Of Gujarat</string>
    <string name="your_name">તમારું નામ</string>
    <string name="your_phone">તમારો મોબાઇલ નંબર</string>
    <string name="Home">Home</string>
    <string name="Live_Poll">Live Poll</string>
    <string name="Points_Winners">Points Winner</string>
    <string name="Winners_">Winners :</string>
    <string name="Menu">Menu</string>
    <string name="your_points">Your Points</string>
    <string name="govt_work">સરકારની કામગીરી</string>
    <string name="dharasabhyo">ધારાસભ્યો</string>
    <string name="percentage_">%1$s%%</string>
    <string name="Date_">Date: %1$s</string>
    <string name="poll_and_survey">પોલ અને સર્વે</string>
    <string name="live_poll">લાઇવ પોલ</string>
    <string name="que_suggestion">પ્રશ્નો સૂચનો</string>
    <string name="notification">નોટીફિકેશન</string>
    <string name="daily_spin_and_win">સ્પિન કરો અને જીતો</string>
    <string name="quiz_and_contest">કવીઝ અને કોન્ટેસ્ટ</string>
    <string name="winner">વિજેતા</string>
    <string name="latest_news">Latest News</string>
    <string name="colors_of_guj">COLORS OF GUJARAT</string>
    <string name="About_Us">About Us</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="Share_App">Share App</string>
    <string name="Terms_Of_Use">Terms Of Use</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Rate">Rate :</string>
    <string name="Rate_out_of_10">Rate out of 10</string>
    <string name="enter_comment">Enter Your Comment/Opinion</string>
    <string name="participate_and">(Participate &amp; Get</string>
    <string name="give_rate_get_10_point_1">(Give Rate &amp; Get</string>
    <string name="give_rate_get_10_point_2">&#160;10&#160;</string>
    <string name="points_with_space">&#160;%1$s&#160;</string>
    <string name="give_rate_get_10_point_3">Points)</string>
    <string name="points_and_win_prizes">Points&#160;/</string>
    <string name="points_and_win_prizes_2">&#160;Win Prize)</string>
    <string name="give_opinion_get_10_point_1">(Give Opinion &amp; Get</string>
    <string name="submit">Submit</string>
    <string name="write_comment">Write A Comment</string>
    <string name="scratch_and_point">Spin &amp; Get Points</string>
    <string name="running">running</string>
    <string name="contest_details_and_rules">Contest Details &amp; Rules</string>
    <string name="prize_details_and_rules">Prize Details &amp; Rules</string>
    <string name="Prize_Details">Prize Details</string>
    <string name="Prize_Details_">Prize Details:</string>
    <string name="Check_Winner">CHECK WINNER</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Mobile_No">Mobile Number</string>
    <string name="quest_comment">Enter your question or comment</string>
    <string name="Send">Send</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="no_internet">Internet connection not available</string>
    <string name="your_city">તમારું શહેર</string>
    <string name="invalid_city">Invalid city name</string>
    <string name="invalid_district">Select District</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_phone">Invalid mobile number</string>
<!--    <string name="Logout">Logout</string>-->
    <string name="no_record_found">No record found.</string>
    <string name="invalid_rating">Kindly first give rating</string>
    <string name="your_ratings">Your Ratings</string>
    <string name="invalid_comment">Comment box is empty</string>
    <string name="invalid_option">Kindly select any option</string>
    <string name="answer_all_questions">Kindly answer all questions</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_question_comment">Invalid question or comment</string>
    <string name="digit_10">10</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="forward_slash">/</string>
    <string name="review_submitted_already">You have already submitted your review.</string>
    <string name="you_have_already_submitted">You have already submitted this poll.</string>
    <string name="answer_already_given">You have already given answer.</string>
    <string name="Enter_Title">Enter Title</string>
    <string name="Enter_Desc">Enter Description</string>
    <string name="Enter_City">Enter City/Town</string>
    <string name="questions_suggestion">તમારા પ્રશ્ર્નો અને સુચનો અહીંયા લખો.</string>
    <string name="download_in_progress">Downloading. Please wait!</string>
    <string name="sharing">Sharing…</string>
    <string name="you_won_points_already">You\'ve won points for today</string>
    <string name="already_participated">You\'ve already submitted your response.</string>
    <string name="view_all_comments"><u>View All Comments</u></string>
    <string name="Terms_">Terms:</string>
    <string name="add_image">Add Image</string>
    <string name="Rules_">Rules:</string>
    <string name="Quiz">Quiz</string>
    <string name="Browse_Files">Browse Files</string>
    <string name="Winners">Winners</string>
    <string name="contest_detail_">Contest Details:</string>
    <string name="Get_Started">Get Started</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="cancel">CANCEL</string>
    <string name="Sponsor_">Sponsor:</string>
    <string name="Update">Update</string>
    <string name="Update_Profile">Update Profile</string>
    <string name="tnc_string">At Colors of Gujarat We Respect Your Privacy. By Continuing You Agree with T &amp; C. 2021&#8211;2022</string>
    <string name="poll_already_given">You Have Already Submitted Answer.</string>
    <string name="Upload_Photo">Upload Photo</string>
    <string name="Select_Photo">Select Photo</string>
</resources>