<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_bottom_navigation_home"
        android:title="@string/Home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_live_poll"
        android:icon="@drawable/selector_bottom_navigation_poll"
        android:title="@string/Live_Poll"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/selector_bottom_navigation_quiz"
        android:title="@string/Quiz"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_winners"
        android:icon="@drawable/selector_bottom_navigation_winners"
        android:title="@string/Points_Winners"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/selector_bottom_navigation_menu"
        android:title="@string/Menu"
        app:showAsAction="always" />
</menu>