<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/semi_transparent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:src="@drawable/close"
            android:theme="@style/ClickableViewWhite" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Menu"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:drawableStart="@drawable/aboutus"
        android:drawablePadding="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/About_Us"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivRateUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:drawableStart="@drawable/rateus"
        android:drawablePadding="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/Rate_Us"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivShareApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:drawableStart="@drawable/share_app"
        android:drawablePadding="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/Share_App"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivTNC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:drawableStart="@drawable/tnc"
        android:drawablePadding="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/Terms_Of_Use"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:drawableStart="@drawable/contact"
        android:drawablePadding="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/Contact_Us"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />
</androidx.appcompat.widget.LinearLayoutCompat>